--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,12 +14,15 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+       
         <td><%= post.title %></td>
         <td><%= post.content %></td>
+        <td><%= post.created_at.to_s(:time) %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      
     <% end %>
   </tbody>
 </table>
