--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,8 @@
 
 <p>
   <strong>Content:</strong>
-  <%= @post.content %>
+  <%= @post.content %> <br>
+  <%= @post.created_at.to_s(:time) %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
