--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+// .post-meta {
+//     background: #fff;
+//     text-align: left;
+//     font-weight: bold;
+//     padding: 10px;
+// }
+
+
+.feed {
+  display: inline-block;
+  border-color: #eee #ddd #bbb;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  margin: 10px 5px;
+  
+  max-width: 468px;
+}
+
+.feedposts {
+  padding: 16px 16px 8px 16px;
+  font-family: "Helvetica Neue";
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 16px;
+  text-align: center;
+
+}
