--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,32 +1,23 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-       
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.created_at.to_s(:time) %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-      
-    <% end %>
-  </tbody>
-</table>
-
 <br>
-
 <%= link_to 'New Post', new_post_path %>
+<br><br>
+    <% @posts.each do |post| %>
+      <div class="feed">
+        <p class="feedposts"><%= post.content %><br>
+          <%= post.created_at.to_s(:time) %><br>
+          <%= link_to 'Show', post %>
+          <%= link_to 'Edit', edit_post_path(post) %>
+          <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </p>
+      </div>
+      <br>
+    <% end %>
+  
+
+
+
+
+
