posts showing in reverse order

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 <br>
 <%= link_to 'New Post', new_post_path %>
 <br><br>
-    <% @posts.each do |post| %>
+    <% @posts.reverse_each do |post| %>
       <div class="feed">
         <p class="feedposts"><%= post.content %><br>
           <%= post.created_at.to_s(:time) %><br>
