--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -25,7 +25,7 @@
 }
 
 #crud-icons a {
-  color: blue; 
+  color: #343a40; 
   text-decoration: none;
   background-color: white;
   padding: 3px 3px 3px 3px;
@@ -36,3 +36,7 @@
   text-decoration: none;
   background-color: white;
 }
+
+
+
+
