--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <link href="css/coming-soon.min.css" rel="stylesheet">
 
   <title>Acebook App</title>
 
@@ -16,6 +17,12 @@
 
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
+
+    
+
+
 </head>
 <body>
 
@@ -54,8 +61,8 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
-    <div class="row">
+  <div class="container1">
+    <div class="row1">
       <div class="col-lg-12 text-center">
          <header>
 
