--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
-  <%= @post.title %>
+  <strong>Username:</strong>
+  <%= @post.username %>
 </p>
 
 <p>
@@ -20,9 +20,9 @@
 
 <% pre_like = @post.likes.find { |like| like.user_id == current_user.id} %>
 <% if pre_like %>
-<%= button_to 'Unlike', post_like_path(@post, pre_like), method: :delete %>
+<%= button_to '🥴', post_like_path(@post, pre_like), method: :delete %>
 <% else %>
-<%= button_to 'Like', post_likes_path(@post), method: :post %>
+<%= button_to '👍', post_likes_path(@post), method: :post %>
 <% end %>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
