add email to each post

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,7 @@
         <p class="feedposts">
           
           <%= post.content %><br>
+          <%= post.email %><br>
           <%= post.created_at.to_s(:time) %><br>
           
           <div id='crud-icons'>
