--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Username:</strong>
-  <%= @post.username %>
+  <strong>Email:</strong>
+  <%= @post.email %>
 </p>
 
 <p>
