--- a/app/views/public/homepage.html.erb
+++ b/app/views/public/homepage.html.erb
@@ -32,7 +32,7 @@
                 <div class='form-row'>
                     <div class='col-lg-7'>
                         <p class="text-center"><a href="/passwords/new">Forgot password?</a></p> 
-                        <button class="btn1" href= '/sign_up'>Create an Account</button></p>
+                        <a class="text-center" href= '/sign_up'>Create an Account</button></p>
                     </div>
                 </div>
             </div>          
